Layout tweaks, mainly for mobiles.
TODO: input validation

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -77,6 +77,11 @@ body {
 h1,h2,h3,h4{
   text-align: center;
   color: var(--main-color);
+  font-size: 13px;
+}
+h1 {
+  font-weight: 500;
+  font-size: 16px;
 }
 label{
   color: var(--main-color);
